# tinydm

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Download.h  DownloadManager.h
src/: Download.cpp  DownloadManager.cpp  tinydm.cpp
